<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_ThemSP"
    android:background="@drawable/background_gd"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"

        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textColor="#1655C0"
            android:textStyle="bold"
            android:text="@string/title_masp"/>
        <EditText
            android:id="@+id/edt_themsp_ma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"

        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textColor="#1655C0"
            android:textStyle="bold"
            android:text="@string/title_tensp"/>
        <EditText
            android:id="@+id/edt_themsp_ten"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textColor="#1655C0"
            android:textStyle="bold"
            android:text="@string/title_giasp"/>
        <EditText
            android:id="@+id/edt_themsp_gia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textColor="#1655C0"
            android:textStyle="bold"
            android:text="@string/title_xuatxua"/>
        <EditText
            android:id="@+id/edt_themsp_xuatxu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textColor="#1655C0"
            android:textStyle="bold"
            android:text="@string/title_loai"/>
        <Spinner
            android:id="@+id/spn_them_loai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textColor="#1655C0"
            android:textStyle="bold"
            android:text="@string/title_nsx"/>
        <Spinner
            android:id="@+id/spn_them_nsx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"

        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textColor="#1655C0"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/title_hinhsp"/>
        <ImageView
            android:id="@+id/img_them_hinh"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_plus"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_them_themsp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_luu"

        android:backgroundTint="#08B4CA"
        />



</LinearLayout>