<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_ChiTietSP"
    android:background="@drawable/background_gd"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_chitietsp"
            android:layout_width="330dp"
            android:layout_height="330dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_chitiet_tensp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_tensp"
        android:layout_marginTop="30dp"
        android:textSize="35dp"
        android:textColor="#1655C0"
        android:textStyle="bold"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_masp"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tv_chitiet_ma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="100.000"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_giasp"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tv_chitiet_gia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="100.000"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_loai"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tv_chitiet_loai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="100.000"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_nsx"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tv_chitiet_nsx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="100.000"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_xuatxua"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tv_chitiet_xuatxu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="100.000"
            android:textColor="#1655C0"
            android:textSize="20dp"/>
    </LinearLayout>

</LinearLayout>