<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_DSNSX"
    android:background="@drawable/background_gd"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dsnsx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dsnsx"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#1655C0"

        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
       >
        <Button
            android:id="@+id/btn_themnsx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_them"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"

            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/title_mansx"
                android:textColor="#1655C0"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_themmansx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"

            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:textColor="#1655C0"
                android:textStyle="bold"
                android:text="@string/title_tennsx"/>
            <EditText
                android:id="@+id/edt_themtennsx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"/>
        </LinearLayout>



    </LinearLayout>

        

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_dsnsx"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

</LinearLayout>